--- a/index.html
+++ b/index.html
@@ -63,26 +63,32 @@
           <heading>News</heading>
           <ul>
             <li>
-              [2024.07] Our paper LaPose on RGB-based category-level object pose estimation is accepted to <b>ECCV2024</b>.
-          </li>
-          <li>[2024.02] 4 papers are accepted to <b>CVPR2024</b>.
-          KP-RED and ShapeMaker focus on joint shape canonicalization, segmentation, retrieval and deformation. 
-          SecondPose outperforms competitors on category-level pose estimation. 
-          MOHO leverages multi-view information for hand-held object reconstruction.
-          </li>
-          <li>
-            [2023.10] Our work GPose2023 <b>wins BOP Challenge 2023</b>, ICCV R6D Workshop. 
-          </li>
-          <li>
-          [2023.09] Our paper DDF-HO on hand-held object reconstruction is accepted to <b>NeurIPS2023</b>.
-          </li>
-          <li>
-          [2023.07] Our paper U-RED on unsupervised shape retrieval and deformation is accepted to <b>ICCV2023</b>.
-        </li>
-        <li>
-          [2022.06] Our category-level pose estimation works GPV-Pose, RBP-Pose, SSP-Pose are accepted to <b>CVPR2022, ECCV2022, IROS2022</b> respectively.
-        </li>  
-        </ul>
+              [2024.07] Joined <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
+              supervised by Gim Hee Lee.
+            </li>
+            <li>
+              [2024.07] Our paper LaPose on RGB-based category-level object pose estimation is accepted to
+              <b>ECCV2024</b>.
+            </li>
+            <li>[2024.02] 4 papers are accepted to <b>CVPR2024</b>.
+              KP-RED and ShapeMaker focus on joint shape canonicalization, segmentation, retrieval and deformation.
+              SecondPose outperforms competitors on category-level pose estimation.
+              MOHO leverages multi-view information for hand-held object reconstruction.
+            </li>
+            <li>
+              [2023.10] Our work GPose2023 <b>wins BOP Challenge 2023</b>, ICCV R6D Workshop.
+            </li>
+            <li>
+              [2023.09] Our paper DDF-HO on hand-held object reconstruction is accepted to <b>NeurIPS2023</b>.
+            </li>
+            <li>
+              [2023.07] Our paper U-RED on unsupervised shape retrieval and deformation is accepted to <b>ICCV2023</b>.
+            </li>
+            <li>
+              [2022.06] Our category-level pose estimation works GPV-Pose, RBP-Pose, SSP-Pose are accepted to
+              <b>CVPR2022, ECCV2022, IROS2022</b> respectively.
+            </li>
+          </ul>
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
@@ -97,13 +103,32 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
-            <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/lapose.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                    LaPose: Laplacian Mixture Shape Modeling for
+                    RGB-Based Category-Level Object Pose Estimation
+                  </papertitle>
+                  <br>
+                  <b>Ruida Zhang</b>,
+                  Ziqin Huang, Gu Wang, Chenyangguang Zhang, Yan Di, Xingxing Zuo, Jiwen Tang, and Xiangyang Ji
+                  <br>
+                  <em>European Conference on Computer Vision (ECCV)</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a>
+                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/kpred.png' width="200">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>
-                  KP-RED: Exploiting Semantic Keypoints for Joint 3D Shape Retrieval and Deformation
+                    KP-RED: Exploiting Semantic Keypoints for Joint 3D Shape Retrieval and Deformation
                   </papertitle>
                   <br>
                   <b>Ruida Zhang</b>*,
@@ -124,7 +149,8 @@
                     ShapeMatcher: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation
                   </papertitle>
                   <br>
-                  Yan Di, Chenyangguang Zhang, Chaowei Wang, <b>Ruida Zhang</b>, Guangyao Zhai, Yanyan Li, Bowen Fu, Xiangyang Ji, Shan Gao
+                  Yan Di, Chenyangguang Zhang, Chaowei Wang, <b>Ruida Zhang</b>, Guangyao Zhai, Yanyan Li, Bowen Fu,
+                  Xiangyang Ji, Shan Gao
                   <br>
                   <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                   <br>
@@ -138,10 +164,12 @@
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>
-                    MOHO: Learning Single-view Hand-held Object Reconstruction with Multi-view Occlusion-Aware Supervision
+                    MOHO: Learning Single-view Hand-held Object Reconstruction with Multi-view Occlusion-Aware
+                    Supervision
                   </papertitle>
                   <br>
-                  Chenyangguang Zhang, Guanlong Jiao, Yan Di, Gu Wang, Ziqin Huang, <b>Ruida Zhang</b>, Fabian Manhardt, Bowen Fu, Federico Tombari, Xiangyang Ji                  <br>
+                  Chenyangguang Zhang, Guanlong Jiao, Yan Di, Gu Wang, Ziqin Huang, <b>Ruida Zhang</b>, Fabian Manhardt,
+                  Bowen Fu, Federico Tombari, Xiangyang Ji <br>
                   <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                   <br>
                   <a href="https://arxiv.org/abs/2310.11696">Paper</a>
@@ -154,7 +182,7 @@
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>
-                  GPose2023: A Modularized Learning-based Object Pose Estimator
+                    GPose2023: A Modularized Learning-based Object Pose Estimator
                   </papertitle>
                   <br>
                   <b>Ruida Zhang</b>,
@@ -170,13 +198,13 @@
                   <p></p>
                 </td>
               </tr>
-            <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/ddfho.png' width="200">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>
-                  DDF-HO: Hand-Held Object Reconstruction via Conditional Directed Distance Field
+                    DDF-HO: Hand-Held Object Reconstruction via Conditional Directed Distance Field
                   </papertitle>
                   <br>
                   <a href="https://zhangcyg.github.io/">Chenyangguang Zhang*</a>,
