--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <heading>News</heading>
           <ul>
             <li>
-              [2024.07] Joined <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
+              [2024.09] Joined <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
               supervised by Gim Hee Lee.
             </li>
             <li>
@@ -94,7 +94,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Publications</heading>
+                  <heading>Selected Publications</heading>
 
                 </td>
               </tr>
@@ -114,11 +114,12 @@
                   </papertitle>
                   <br>
                   <b>Ruida Zhang</b>,
-                  Ziqin Huang, Gu Wang, Chenyangguang Zhang, Yan Di, Xingxing Zuo, Jiwen Tang, and Xiangyang Ji
+                  Ziqin Huang, Gu Wang, Chenyangguang Zhang, Yan Di, Xingxing Zuo, Jiwen Tang, Xiangyang Ji
                   <br>
                   <em>European Conference on Computer Vision (ECCV)</em>, 2024
                   <br>
-                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a>
+                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a> / <a
+                    href="https://github.com/lolrudy/LaPose">Code</a>
                   <p></p>
                 </td>
               </tr>
@@ -136,11 +137,12 @@
                   <br>
                   <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                   <br>
-                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a>
+                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a> / <a
+                    href="https://github.com/lolrudy/KP-RED">Code</a>
                   <p></p>
                 </td>
               </tr>
-              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+              <!-- <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/shapematcher.png' width="200">
                 </td>
@@ -157,8 +159,8 @@
                   <a href="https://arxiv.org/abs/2311.11106">Paper</a>
                   <p></p>
                 </td>
-              </tr>
-              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+              </tr> -->
+              <!-- <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/moho.png' width="200">
                 </td>
@@ -175,29 +177,7 @@
                   <a href="https://arxiv.org/abs/2310.11696">Paper</a>
                   <p></p>
                 </td>
-              </tr>
-              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/gpose.jpg' width="200">
-                </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
-                  <papertitle>
-                    GPose2023: A Modularized Learning-based Object Pose Estimator
-                  </papertitle>
-                  <br>
-                  <b>Ruida Zhang</b>,
-                  Ziqin Huang, Gu Wang, Xingyu Liu,
-                  Chenyangguang Zhang,
-                  Xiangyang Ji
-                  <br>
-                  <em>International Conference on Computer Vision Workshop (ICCVW)</em>, 2023
-                  <br>
-                  <b>Winner of BOP Challenge 2023 @ ICCV R6D Workshop. </b>
-                  <br>
-                  <a href="https://zhangcyg.github.io/figs/GPose_ICCV23.pdf">Slides</a>
-                  <p></p>
-                </td>
-              </tr>
+              </tr> -->
               <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/ddfho.png' width="200">
@@ -244,29 +224,6 @@
                   <a href="https://arxiv.org/abs/2308.06383">Paper</a>
                   /
                   <a href="https://github.com/ZhangCYG/U-RED">Code</a>
-                  <p></p>
-                </td>
-              </tr>
-              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/gdrnpp.png' width="220">
-                </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
-                  <papertitle>GDRNPP: Extending Geometry-Guided Direct Regression Network in 2022
-                  </papertitle>
-                  <br>
-                  Xingyu Liu,
-                  <b>Ruida Zhang</b>,
-                  Chenyangguang Zhang, Bowen Fu, Jiwen Tang, Xiquan Liang, Jingyi Tang, Xiaotian Cheng, Yukang
-                  Zhang, Gu Wang, Xiangyang Ji
-                  <br>
-                  <em>European Conference on Computer Vision WorkShop (ECCVW)</em>, 2022
-                  <br>
-                  <b>Winner of BOP Challenge 2022 @ ECCV R6D Workshop.</b>
-                  <br>
-                  <a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>
-                  /
-                  <a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>
                   <p></p>
                 </td>
               </tr>
@@ -346,6 +303,69 @@
                   <!-- <p>
               We employ point-wise bounding box voting to improve the performance of category-level object pose estimation.
               </p> -->
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Competitions</heading>
+
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/gpose.jpg' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                    GPose2023: A Modularized Learning-based Object Pose Estimator
+                  </papertitle>
+                  <br>
+                  <b>Ruida Zhang</b>,
+                  Ziqin Huang, Gu Wang, Xingyu Liu,
+                  Chenyangguang Zhang,
+                  Xiangyang Ji
+                  <br>
+                  <em>International Conference on Computer Vision Workshop (ICCVW)</em>, 2023
+                  <br>
+                  <b>Winner of BOP Challenge 2023 @ ICCV R6D Workshop. </b>
+                  <br>
+                  <a href="https://zhangcyg.github.io/figs/GPose_ICCV23.pdf">Slides</a>
+                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/gdrnpp.png' width="220">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>GDRNPP: Extending Geometry-Guided Direct Regression Network in 2022
+                  </papertitle>
+                  <br>
+                  Xingyu Liu,
+                  <b>Ruida Zhang</b>,
+                  Chenyangguang Zhang, Bowen Fu, Jiwen Tang, Xiquan Liang, Jingyi Tang, Xiaotian Cheng, Yukang
+                  Zhang, Gu Wang, Xiangyang Ji
+                  <br>
+                  <em>European Conference on Computer Vision WorkShop (ECCVW)</em>, 2022
+                  <br>
+                  <b>Winner of BOP Challenge 2022 @ ECCV R6D Workshop.</b>
+                  <br>
+                  <a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>
+                  /
+                  <a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>
+                  <p></p>
                 </td>
               </tr>
 
