--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <heading>News</heading>
           <ul>
             <li>
-              [2024.09] Joined <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
+              [2024.09] I join <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
               supervised by Gim Hee Lee.
             </li>
             <li>
