--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     Previously, I received my B.E. degree in Automation Engineering at Tsinghua University.
                     <br>
                     <br>
-                    My research interest lies in <b>3D computer vision</b>,
-                    including <b>object pose estimation, 3D reconstruction </b> and <b> scene understanding</b>.
+                   I work on <b>3D computer vision</b> for <b>robotics</b>, 
+                   particularly in <b>object pose estimation</b>, <b>3D reconstruction</b>, and <b>scene understanding</b>, aiming to bridge semantic perception with physical interaction.
                     <br>
                     <br>
-                    I served as a reviewer for CVPR, ICCV, ECCV, RAL, TCSVT, TIM.
+                    I served as a reviewer for CVPR, ICCV, ECCV, TPAMI, ACM MM, RAL, TCSVT, TIM.
                     <br>
                   </p>
                   <p style="text-align:center">
@@ -62,6 +62,10 @@
 
           <heading>News</heading>
           <ul>
+            <li>
+              [2025.05] I join <a href="https://msc.berkeley.edu/">MSC lab</a> of UC Berkeley as a visiting student
+              supervised by Masayoshi Tomizuka.
+            </li>
             <li>
               [2024.09] I join <a href="https://www.comp.nus.edu.sg/~leegh/">CVRP lab</a> of NUS as a visiting student
               supervised by Gim Hee Lee.
@@ -105,6 +109,23 @@
             <tbody>
               <tr onmouseout="malle_stop()" onmouseover="malle_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
+                  <img src='images/streetgs.png' width="200">
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>
+                    Street Gaussians without 3D Object Tracker
+                  </papertitle>
+                  <br>
+                  <b>Ruida Zhang</b>,
+                  Chengxi Li, Chenyangguang Zhang, Xingyu Liu, Haili Yuan, Yanyan Li, Xiangyang Ji, Gim Hee Lee
+                  <br>
+                  <em>preprint</em>, 2024
+                  <br>
+                  <a href="https://arxiv.org/abs/2412.05548">Paper</a>                  <p></p>
+                </td>
+              </tr>
+              <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
                   <img src='images/lapose.png' width="200">
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
@@ -118,7 +139,7 @@
                   <br>
                   <em>European Conference on Computer Vision (ECCV)</em>, 2024
                   <br>
-                  <a href="https://arxiv.org/pdf/2403.10099.pdf">Paper</a> / <a
+                  <a href="https://arxiv.org/abs/2409.15727">Paper</a> / <a
                     href="https://github.com/lolrudy/LaPose">Code</a>
                   <p></p>
                 </td>
