--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <p style="text-align:center">
                     <name>Ruida Zhang (张睿达)</name>
                   </p>
-                  <p>I am a third-year Ph.D. student at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua
+                  <p>I am a Ph.D. student at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua
                       University</a>,
                     supervised by Prof.
                     <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>.
@@ -62,6 +62,10 @@
 
           <heading>News</heading>
           <ul>
+            <li>
+              [2025.07] Our paper ''Street Gaussians without 3D Object Tracker'' is accepted to <b>ICCV2025</b>.
+              It eliminates the reliance on 3D object tracker to enhance generalization ability of street scene reconstruction for autonomous driving.
+            </li>
             <li>
               [2025.05] I join <a href="https://msc.berkeley.edu/">MSC lab</a> of UC Berkeley as a visiting student
               supervised by Masayoshi Tomizuka.
@@ -119,7 +123,7 @@
                   <b>Ruida Zhang</b>,
                   Chengxi Li, Chenyangguang Zhang, Xingyu Liu, Haili Yuan, Yanyan Li, Xiangyang Ji, Gim Hee Lee
                   <br>
-                  <em>preprint</em>, 2024
+                  <em>International Conference on Computer Vision (ICCV)</em>, 2025
                   <br>
                   <a href="https://arxiv.org/abs/2412.05548">Paper</a>                  <p></p>
                 </td>
